# DailyAgentGarden

./: .env.example  .gitignore  .gitmodules  README.md  deploy.py  public_openapi (1).yml  pyproject.toml  requirements.txt
.claude/: settings.local.json
agents/: CLAUDE.md  __init__.py  requirements.txt
agents/.claude/: settings.local.json
agents/VeloceAgent/: agent.py  auth.py  config.py  excel_tools.py  location_config.py  reporting_tools.py  veloce_tools.py
agents/VeloceAgent/.adk/: session.db
agents/baseLawAgent/: __init__.py  agent.py  config.yaml  prompt.py
agents/baseLawAgent/.adk/: session.db
agents/baseLawAgent/drafting_agent/: __init__.py  agent.py  config.yaml  prompt.py
agents/drafting_agent/: __init__.py  agent.py  config.yaml  prompt.py
agents/insightSessionAgent/: agent.py  config.py  prompt.py  tools.py
agents/kaos_workflow_agent/: __init__.py  agent.py  config.py  prompt.py
agents/knowledge_agent/: __init__.py  agent.py  config.yaml
agents/orchestrator/: __init__.py  agent.py  config.yaml  prompt.py
agents/qboAgent/: PLAN.md  account_tools.py  agent.py  auth.py  config.py  customer_vendor_tools.py  expense_tools.py  helpers.py  invoice_tools.py  report_tools.py
agents/research_agent/: __init__.py  agent.py  config.yaml  prompt.py
docs/: agent_patterns.md  architecture.md  google_adk_patterns.md
rag_agent/: agent.py
rag_agent/tools/: __init__.py
scripts/: accounts.txt  veloce_payment_report.py
shared/: base_agent.py
shared/config/: base_config.py
tests/: conftest.py  test_integration.py
(+14 files in other folders)
